tests/error/enum_defined2.gw
// [contains] already declared
 int i;
enum
{
	first
} i;
